--- a/index.html
+++ b/index.html
@@ -15,5 +15,22 @@
             more interesting. As with sentence length, if all paragraphs are 
             the same size your writing will be choppy.</p>
     </div>
+    <div>
+        <h3>My Second Website</h3>
+        <p>Writing experts recommend paragraphs of no more than 150 words 
+            in three to eight sentences. Paragraphs should never be longer 
+            than 250 words. Vary the lengths of your paragraphs to make them 
+            more interesting. As with sentence length, if all paragraphs are 
+            the same size your writing will be choppy.</p>
+    </div>
+    <div>
+        <h3>My Third Website</h3>
+        <p>Writing experts recommend paragraphs of no more than 150 words 
+            in three to eight sentences. Paragraphs should never be longer 
+            than 250 words. Vary the lengths of your paragraphs to make them 
+            more interesting. As with sentence length, if all paragraphs are 
+            the same size your writing will be choppy.</p>
+    </div>
+    
 </body>
 </html>
