added a list to push code

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
             more interesting. As with sentence length, if all paragraphs are 
             the same size your writing will be choppy.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a menaningful commit message</li>
+            <li>git push</li> 
+        </ul>
+    </div>
     
 </body>
 </html>
